--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -11,15 +11,15 @@ assignees: ''
 (エラーが発生しているのであれば、エラーログを残しておくこと)
 
 ## 発生手順
-(以下のような手順を書く)
+(以下のような手順を書く。)
 1. 物体パーツに〇〇を設定する
 2. WWA Wingを起動し、物体パーツに触れる
 
 ## 原因
-(もし原因がわかれば、説明する)
+(もし原因がわかれば、説明する。ただし、WWA Wing内部に詳しい人でないと分からないので無理して書く必要は無い。)
 
 ## 環境
-(各項目すべて埋めるようにする)
+(各項目すべて埋めるようにする。)
 - OS: [Windows 10 64bit]
 - ブラウザ: [Firefox 64]
 - WWA Wingのバージョン: [v3.1.6]
